# cmatnum

./: .gitignore  22x22x22_raw.mpl  3x3x6_raw.mpl  A_eval_order.pickle  A_eval_order_3x3x6.pickle  A_reduced_exprs.pickle  A_reduced_exprs_3x3x6.pickle  A_replacements.pickle  A_replacements_32x32.pickle  A_replacements_3x3x6.pickle  B_eval_order_3x3x6.pickle  B_reduced_exprs.pickle  B_reduced_exprs_3x3x6.pickle  B_replacements.pickle  B_replacements_3x3x6.pickle  C.txt  CITATION.cff  CMakeLists.txt  C_3x3x6.txt  README.md  cmat.c  cmat.h  fmm_22x22.c  fmm_22x22.cpp  fmm_22x22.h  fmm_32x32.c  fmm_32x32.h  fmm_3x3.c  fmm_3x3.h  fmm_3x3x6.c  fmm_3x3x6.h  gen_22x22_code.py  gen_32x32_code.py  gen_3x3_code.py  gen_3x3x6_code.py  gen_bigfmm.py  gen_reduced_compgraph.py  gen_reduced_compgraph_32x32.py  gen_reduced_compgraph_3x3x6.py  m_3x3x6.txt  (+8 more)
generated_files/: fAx1.c  fAx1.h  fAx10.c  fAx10.h  fAx100.c  fAx100.h  fAx1007.c  fAx1007.h  fAx1009.c  fAx1009.h  fAx101.c  fAx101.h  fAx1010.c  fAx1010.h  fAx1012.c  fAx1012.h  fAx1015.c  fAx1015.h  fAx1016.c  fAx1016.h  fAx1018.c  fAx1018.h  fAx1020.c  fAx1020.h  fAx1021.c  fAx1021.h  fAx1023.c  fAx1023.h  fAx1024.c  fAx1024.h  fAx1026.c  fAx1026.h  fAx1027.c  fAx1027.h  fAx1029.c  fAx1029.h  fAx1030.c  fAx1030.h  fAx1031.c  fAx1031.h  (+78565 more)
